--- a/package.json
+++ b/package.json
@@ -2,10 +2,13 @@
   "name": "starcraft-api",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
+  "engines": {
+    "node": "10.15.0",
+    "npm": "*"
+  },
   "scripts": {
-    "start": "node server.js",
-    "devStart": "nodemon server.js"
+    "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
     "type": "git",
