--- a/package.json
+++ b/package.json
@@ -2,13 +2,9 @@
   "name": "starcraft-api",
   "version": "1.0.0",
   "description": "",
-  "main": "server.js",
-  "engines": {
-    "node": "10.15.0",
-    "npm": "*"
-  },
+  "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "devStart": "nodemon server.js"
   },
   "repository": {
     "type": "git",
