--- a/package.json
+++ b/package.json
@@ -22,7 +22,9 @@
   "homepage": "https://github.com/philtodisco/starcraft-api#readme",
   "dependencies": {
     "express": "^4.17.2",
-    "mongoose": "^6.1.8"
+    "mongoose": "^6.1.8",
+    "webpack": "^5.67.0",
+    "webpack-dev-server": "^4.7.3"
   },
   "devDependencies": {
     "dotenv": "^14.3.2",
