update start scripts

--- a/package.json
+++ b/package.json
@@ -8,7 +8,8 @@
     "npm": "7.10.0"
   },
   "scripts": {
-    "devStart": "nodemon server.js"
+    "devStart": "nodemon server.js",
+    "start": "node server.js"
   },
   "keywords": [
     "heroku"
